# loan-eligibility-app

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
loan_eligibility.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
loan_eligibility/api/: main.py  schemas.py
loan_eligibility/app/: app.py
loan_eligibility/data/: data_cleaning.py  feature_engineering.py
loan_eligibility/pipeline/: prediction_pipeline.py
loan_eligibility/utils/: train_and_test_model.py
models/: credit_risk_model.pkl
src/data/: data_cleaning.py
src/loan_approval_prediction/app/: app.py
src/loan_approval_prediction/pipeline/: prediction_pipeline.py
src/loan_approval_prediction/utils/: train_and_test_model.py
src/model/: credit_risk_model.py
