[project]
name = "loan_approval_prediction"
version = "0.1.0"
dependencies = [
    "pandas", 
    "numpy", 
    "scikit-learn", 
    "xgboost", 
    "streamlit", 
    "matplotlib", 
    "seaborn", 
    "joblib", 
    "shap"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"